style.css
:root {

    --typography-h1: 4rem;
    --typography-h2: 3rem;
    --typography-h4: 1.75rem;
    --typography-p : 1.25em;
    --typography-s : .8125rem;
    
    --typography-h1-leading: 1.2;
    --typography-h2-leading: 1.2;
    --typography-h4-leading: 1.25;
    --typography-p-leading : 1.5;
    
    --typography-margin-heading: 1.75rem;
    --typography-margin-body : 1.125rem;
    
    --layout-container: 1.25rem;
    --layout-grid : 3.625rem;
    --layout-gutter : 1rem;
    
    --gap-cta: .75rem;
    --gap-hero : 2rem;
    --gap-feature: 2rem;
    --gap-card : 1.25rem;
    
    --radius-button: 2rem;
    --radius-card: 2em;
    
    }
    
    html {
        scroll-behavior: smooth;
    }
   

    @font-face { font-family: 'Ubuntu Mono'; src: url('UbuntuMono.ttf') format('truetype') }

/* ------- Header ------- */
    .sidebar-menu-container{
        position: fixed;
        right: 0em;
        z-index: 10;
    }

    .nav-menu-icon{
        display: block;
        margin-right: 6em;
        margin-top: 1.5em;
        width: 2em;
    }

    .nav-btn{
        opacity: 100%;
        transform-origin: 1em 1em;
        transform: rotate(0deg);
        transition: all 100ms ease-in-out;
    }

    #nav-check{
        display: none;
    }

    #nav-check:checked ~ .nav > .mobile-sidebar{
        right: 0em;
    }

    #nav-check:checked ~ .nav > .sidebar-menu-container > .nav-btn{
        transform: rotate(90deg);
        opacity: 50%;
    }


    .mobile-sidebar{
        
        position:fixed;
        z-index: 4;
        right: -20em;
        height: 100em;
        width: 14em;
        background-color: #2a2a2a;
        transition: all 300ms ease-in-out;
        box-shadow:1px 0px 0px 0px rgb(123, 123, 123) inset;
    }

    .mobile-nav-container{
        display: grid;
        grid-template-rows: auto auto;
        gap: 2em;
        margin: 0em;
        margin-top: 6em;
        padding: 2em;
    }

    .component-button-mobile{
        margin: 0em 0em;
        padding: .7rem 1rem;
        font-family:'Ubuntu Mono';
        font-weight: 300;
        font-size: 1.25em;
        text-align: center;
        text-decoration: none;
        color: white;
        border-radius: var(--radius-card);
        background: rgba(117, 110, 110, 0.188)
    }

    .component-button-mobile:hover{
        font-weight: 600;
        box-shadow:0px 0px 0px 1px rgba(255, 255, 255, 1) inset;
        background: rgba(110, 100, 100, 0.445)
    }

    .header-nav{
        background-color: rgb(19, 19, 19);
        width: auto;
    }

    .header-nav.mobile{
        position:fixed;
        z-index: 3;
        width: 100%;
    }

    .section-header{
        display:flex;
        align-items:center;
        white-space: nowrap;
        margin-left: auto;
        margin-right: auto;
        padding: 4.5em 20%;
        backdrop-filter: blur(5px);
        background-color: rgb(19, 19, 19);
        width: auto;
    }

    .section-header.mobile{
        padding: 1em 10%;
    }

    .header-logo{
        margin-right: auto;
    }

    .header-logo:hover{
        fill: black;
        stroke-width: 8px;
        stroke:white;
    }

    .nav-buttons{
        margin: .5em .5em;
        padding: 2.25% 3%;
        padding-right: 0em;
        margin-left: auto;
    }

    .component-button {
        margin: 0em 0em;
        padding: .7rem 1rem;
        font-family:'Ubuntu Mono';
        font-weight: 300;
        font-size: 1.25em;
        text-align: center;
        text-decoration: none;
        color: white;
        border-radius: var(--radius-card);
        background: rgba(117, 110, 110, 0.188)
    }

    .component-button:hover{
        font-weight: 600;
        box-shadow:0px 0px 0px 1px rgba(255, 255, 255, 1) inset;
        background: rgba(110, 100, 100, 0.445)
    }

/* ------- Hero Section ------- */

    .hero-background{
        background-repeat: repeat-x;
        background-position-x: center;
        background-size: 2500px;
        height: 500px;
        background-image:url("img/hush.is_hero_background.png");
        background-color: rgb(26, 26, 26);
        overflow: hidden;
    }

    .hero-background.mobile{
        display: flexbox;
        margin-left: auto;
        margin-right: auto;
        overflow: hidden;
    }

    .hero-image{
        display: block;
        height: 500px;
        margin-left: auto;
        margin-right: auto;
        position: relative;
        left: 50%;
        margin-left: -1250px;
        overflow: hidden;
    }

    .hero-image-mobile{
        display: inline-block;
        width: 100%;

    }

/* ------- Page & Content Sizing------- */

    body{
        margin: 0em;
        padding: 0em;
        background-color: rgb(26, 26, 26);
    }

   .page-content{
        
        margin-left: auto;
        margin-right: auto;
        margin-bottom: 4em;
        width: 1200px;
        
        
   }

   .page-content.mobile{
       display: flexbox;
       width: 100%;
       margin-bottom: 0em;
       
   }

/* ------- Grids ------- */

   .grid-container-3x2{
        display: grid;
        grid-template-columns: auto auto auto;
        grid-template-rows: auto auto;
        gap: 2em;
        padding: -1em 2em;
        padding-top: 4em;
   }

   .grid-container-3x2.mobile{
        display: grid;
        grid-template-columns: auto;
        grid-template-rows: auto;
        gap: 2em;
        padding: 8em 4em;
        padding-top: 4em;
    }

   .grid-item-3x2{
        margin-left: auto;
        margin-right: auto;
        color: aliceblue;
        text-align: center;
        padding: 0em 0em; 
   }

   .grid-item-3x2.mobile{
       
   }

   .grid-container-2x1{
        display: grid;
        grid-template-columns: auto auto auto;
        grid-template-rows: auto auto;
        gap: 4em;
        padding: -1em 2em; 
    }

    .grid-container-2x1.mobile{
        grid-template-columns: auto;
        gap: 2em;
        padding: 0em 4em; 
        padding-bottom: 0em;
    }

    .grid-item-desc-2x1{
        padding: 0em 0em;
        font-size: 1.1rem;
    }

    .grid-item-desc.mobile{
        margin: 0em -3em;
    }


    .grid-item-desc.mobile > p {
        margin: 0em 3em;
    }

   .grid-item-icon{
        display: inline-block;
        padding-top: 1em;
        max-width: 35%;
   }

   .grid-item-button{
        position: relative;
        z-index: 0;
        margin-top: -3em;
        padding: 1em 0em;
        border-radius: 2em;
        background-color: #3e3e3e;
        text-decoration: none;
        color: white;
        border-radius: var(--radius-card);

   }

   .grid-item-button:hover{
        font-weight: 600;
        box-shadow:0px 0px 0px 1px rgba(255, 255, 255, 1) inset;
        background-color: #515151;
   }

   .grid-item-button-text{
       padding-top: 1em;
       margin-bottom: 0em;
       text-decoration: none;
   }

   .grid-sub-item{
        padding: 2em;
        position: relative;
        z-index: 1;
        border-radius: var(--radius-card);
        background-color: #262626;
   }

   .grid-item-screenshot{
        display: inline-block;
        padding-right: 8em;
        padding-top: 4em;
        max-width: 100%;
    }

    .grid-item-screenshot.mobile{
        display: inline-block;
        padding-right: 0em;
        padding-top: 0em;
        max-width: 100%;
    }

/* ------- Dividers ------- */

   .divider{
       background-image: url(img/HUSH_website_divider_pattern.png);
       background-repeat: repeat-x;
       background-position-x: center;
       background-position-y: center;
       background-size: 1200px;
       height: 400px;
       background-color: rgb(26, 26, 26);
   }

   .divider.mobile{
        background-size: 900px;
        height: 200px;
   }


/* ------- Buy HUSH Section ------- */

    .buttons-single-row{
       display: flex;
       margin-left: auto;
       margin-right: auto;
       width: 50%;
       margin-top: 0em;
       
    }

    .buttons-single-row.mobile{
        width: 100%;
        padding-bottom: 4em;
        
    }

   .buttons-single-row > a{
       
        display: block;
        margin: 1em;
    
    }

    .button-single-column{
        display: block;
        width: 50%;
        margin-left: auto;
        margin-right: auto;
        margin-top: 2em;
        margin-bottom: 2em;
    }

    .button-single-column.mobile.grid-1x2{
        
        padding: 1.5em 3em;
        margin-bottom: 6em;
    }








/* ------- HTML Tag Properties ------- */

    h1{
        font-family:'Ubuntu Mono';
        text-align: center;
        font-size: var(--typography-h1);
        color: white;
    }

    h2{

        font-family:'Ubuntu Mono';
        text-align: center;
        font-size: var(--typography-h2);
        color: white;
    }

    h2.grid-item-heading-2x2{
        margin: 0%;
        margin-left: auto;
        margin-right: auto;
        padding-top: 2.5em;
    }

    h2.grid-item-heading-2x2.mobile{
        margin: 0%;
        margin-left: auto;
        margin-right: auto;
        padding-top: 2em;
        padding-bottom: 0em;
    }

    h2.home-heading{
        margin: 0%;
        margin-left: auto;
        margin-right: auto;
        margin-bottom: 0em;
        padding-top: 5em;
    }

    h2.home-heading.mobile{
        padding-top: 4em;
    }

    h4{
        font-family:'Ubuntu Mono';
        text-align: center;
        font-size: var(--typography-h4);
        color: white;
    }

    h4.grid-item-title{
        text-align: left;
    }

    h4.footer-CTA{
        margin: 0em 0em;
    }

    p{
        font-family:'Ubuntu Mono';
        font-size: var(--typography-p);
        text-align: center;
        color: white;
    }

    p.grid-item-desc{
        text-align: left;
        color: #a8a8a8;
    }

    p.grid-item-button-text{
        text-align: center;
    }

    p.footer-tagline{
        font-size: 1.2em;
    }

/* ------- Footer ------- */

    .section-footer{
        margin-top: 0em;
    }

    .section-footer.mobile{
        margin: 0em 2em;
    }

    .footer-copywrite{
       padding: 2em .5rem;
       text-align: center;
       color: white;
       font-family:'Ubuntu Mono';
    }

   .container-footer-icons{
        padding: .75rem .5rem;
        text-align: center;
    }

    .footer-icons{
       padding: 1rem .75rem;
       width: 2.75em;
    }

    .footer-icons:hover{
        filter: invert(100%);
        background-color: rgb(0, 0, 0);
        border-radius: var(--radius-card);

    }

    .tooltip {
        position: relative;
        display: inline-block;
        border-bottom: 1px dotted black;
    }
  
    .tooltip {
        font-family:'Ubuntu Mono';
        visibility: hidden;
        width: 120px;
        background-color: rgb(255, 255, 255);
        color: rgb(0, 0, 0);
        text-align: center;
        border-radius: var(--radius-card);
        padding: 5px 0;
        /* Position the tooltip */
        position: absolute;
        z-index: 1;
        margin-left: -5.5rem;
        margin-top: -2.75rem;

    }
    .footer-icons:hover + .tooltip {
        visibility: visible;
    }

    /* ------- Media Queries ------- */


@media screen and (min-aspect-ratio: 4/3) and (max-aspect-ratio: 21/9){
    .nav{
        display: none;
    }
    .mobile-nav{
        display: none;
    }
    .mobile{
        display: none;
    }
    .hero-image-mobile{
        display: none;
    }
    .filler{
        display: none;
    }
}

@media screen and (max-aspect-ratio: 4/3){

    .desktop{
        display: none;
    }
}

@media only screen and (hover: none) and (pointer: coarse){

}

